compiler/typ/tests/fixtures/diagnostics/0978_mli_binary_type_underapplied_05.mli.infer.expected
File "0978_mli_binary_type_underapplied_05.mli", line 1:
Warning 24 [bad-module-name]: bad source file name: 0978_mli_binary_type_underapplied_05 is not a valid module name.

File "0978_mli_binary_type_underapplied_05.mli", line 2, characters 16-32:
2 | val x_epsilon : int pair_epsilon
                    ^^^^^^^^^^^^^^^^
Error: The type constructor pair_epsilon expects 2 argument(s),
       but is here applied to 1 argument(s)
