compiler/typ/tests/fixtures/diagnostics/0978_mli_binary_type_underapplied_05.mli
type ('a, 'b) pair_epsilon
val x_epsilon : int pair_epsilon
